fix horizontal scroll issue.  make snackbar stand out

--- a/PharmaProject.client/src/styles/App.css
+++ b/PharmaProject.client/src/styles/App.css
@@ -259,3 +259,7 @@ footer {
 .table td {
     color: rgba(0, 0, 0, 0.87)  !important;
 }
+
+.css-wnkddu-MuiPaper-root-MuiAlert-root {
+    background-color: #dcf3dc !important;
+}
